# WD

./: README.md  docker-compose.yml
document-converter/: nginx.conf
document-converter/server/: stdio_server.py
document-converter/typescript-server/: Dockerfile  package-lock.json  package.json
document-converter/typescript-server/src/: document-converter.ts  index.ts
server/: Dockerfile  document_converter.py  pyproject.toml
typescript-server/: tsconfig.json
typescript-server/src/: stdio-server.ts
