[project]
name = "mcp-document-converter-server"
version = "0.1.0"
description = "MCP Document Converter Server with Streamable HTTP, SSE and Stdio support"
requires-python = ">=3.12"
dependencies = [
    "mcp~=1.9.0",
    "uvicorn~=0.32.0",
    "pypandoc~=1.14",
    "markdown~=3.7",
    "beautifulsoup4~=4.12.0",
    "reportlab~=4.2.0",
    "python-docx~=1.1.0",
    "PyPDF2~=3.0.0",
    "pdfplumber~=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.0.0",
    "black~=24.0.0",
    "flake8~=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
doc-converter-server = "document_converter:main"